--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,19 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!-- facebook -->
+  <meta property="og:title" content="广州美汇达厨房有限公司">
+  <meta property="og:description" content="描述描述描述描述描述">
+  <meta property="og:site_name" content="xxxx.com">
+  <meta property="og:url" content="https://xxxx.com">
+  <meta property="og:image" content="https://xxxx.com/image_background.jpg">
+  <!-- twitter -->
+  <meta property="twitter:url" content="https://xxxx.com">
+  <meta name="twitter:title" content="广州美汇达厨房有限公司">
+  <meta name="twitter:description" content="描述描述描述描述描述">
+  <meta name="twitter:site" content="xxxx.com">
+  <meta property="twitter:image" content="https://xxxx.com/image_background.jpg">
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
     <%= htmlWebpackPlugin.options.title %>
